--- a/cfg/yolov3-voc.cfg
+++ b/cfg/yolov3-voc.cfg
@@ -1,10 +1,10 @@
 [net]
 # Testing
- batch=1
- subdivisions=1
+# batch=32
+# subdivisions=8
 # Training
-# batch=64
-# subdivisions=16
+batch=32 #48
+subdivisions=8
 width=416
 height=416
 channels=3
